--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Client",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "devDependencies": {
     "react-scripts": "0.7.0"
