--- a/Client/package.json
+++ b/Client/package.json
@@ -4,9 +4,15 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "axios": "^0.15.2",
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
@@ -16,5 +22,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
